--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,3 @@
 theme: jekyll-theme-cayman
-title: Crime, Wealth and Power - Your Guide For The 2019 General Elections
+title: Crime, Wealth and Power - 
+description: Your guide for the 2019 general elections
