--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-cayman
 title: Crime, Wealth and Power 
-description: Your guide for the 2019 general elections <br> By Adit Whorra, Mayukh Nair & Sahil Bhargava
+description: Your guide for the 2019 general elections<br><br>By Adit Whorra, Mayukh Nair & Sahil Bhargava
 github:
   is_project_page: false
